test(sandside): Implement test for PageRequestFormatter